--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "com.example.hw2"
+        applicationId "com.example.homework2"
         minSdkVersion 16
         targetSdkVersion 29
         versionCode 1
