--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,9 @@ buildscript {
     repositories {
         google()
         jcenter()
-        
-    }
+        maven { url 'https://jitpack.io'}
+
+        }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.2'
         
@@ -20,6 +21,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url 'https://jitpack.io'}
         
     }
 }
