First feature: almost done

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.homework2">
 
-    <uses-feature android:name="android.hardware.sensor.accelerometer" android:required="true" />
+    <uses-feature
+        android:name="android.hardware.sensor.accelerometer"
+        android:required="true" />
+    <uses-feature android:name="android.hardware.sensor.gyroscope" android:required="true"/>
+
     <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,6 +17,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <activity android:name=".Feature1AlarmPage" />
         <activity android:name=".Feature3Setting" />
         <activity android:name=".Feature1Setting" />
         <activity android:name=".Feature2Setting" />
@@ -21,9 +29,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name=".ShakeEventListener"
+
+        <service
+            android:name=".ShakeEventListener"
             android:exported="true"
             android:process=":ServiceProcess" />
+
+        <receiver android:name=".AlertReceiver" />
     </application>
 
 </manifest>
